--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "parkis_ta",
+  "name": "parkis_ta_indigo",
   "version": "1.0.0",
-  "description": "webdriverio",
+  "description": "Demo project for interns to test Indigo app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "npm run prettier && npm run lint:fix",
+    "lint:fix": "eslint --color --fix --quiet --ext .ts ./",
+    "prettier": "prettier --write \"./**/*.ts\"",
+    "test": "bash cleanup.sh && wdio wdio.conf.ts --env=stage --client=indigo && node format.js && npm run report",
+    "build": "tsc -p tsconfig.json",
+    "report": "node config/cucumber-reporter.ts"
   },
   "repository": {
     "type": "git",
@@ -21,17 +26,33 @@
     "url": "https://github.com/dzonasm/parkis_TA/issues"
   },
   "homepage": "https://github.com/dzonasm/parkis_TA#readme",
+  "dependencies": {
+    "@cucumber/cucumber": "8.5.1",
+    "@types/lodash": "4.14.182",
+    "@wdio/cli": "7.21.0",
+    "@wdio/cucumber-framework": "7.21.0",
+    "@wdio/local-runner": "7.21.0",
+    "@wdio/spec-reporter": "7.21.0",
+    "chromedriver": "104.0.0",
+    "cucumber-html-reporter": "5.5.0",
+    "wdio-chromedriver-service": "7.2.2",
+    "wdio-cucumberjs-json-reporter": "2.0.4",
+    "wdio-geckodriver-service": "1.1.2",
+    "yargs": "17.2.1"
+  },
   "devDependencies": {
-    "@badisi/wdio-harness": "^1.0.5",
-    "@wdio/cli": "^7.21.0",
-    "@wdio/cucumber-framework": "^7.21.0",
-    "@wdio/local-runner": "^7.21.0",
-    "@wdio/spec-reporter": "^7.21.0",
-    "chromedriver": "^104.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
-    "wdio-chromedriver-service": "^7.3.2",
-    "wdio-cucumberjs-json-reporter": "^4.4.3",
-    "wdio-wait-for": "^2.2.6"
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.5",
+    "@babel/preset-env": "7.16.4",
+    "@babel/register": "7.16.0",
+    "@types/jest": "28.1.1",
+    "@typescript-eslint/parser": "4.6.1",
+    "@typescript-eslint/eslint-plugin": "4.6.1",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-import": "2.26.0",
+    "prettier": "2.3.2",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
